updated unraid branding; upgrade to Qt 5.11.1

--- a/dmg_osx/template.app/Contents/Info.plist
+++ b/dmg_osx/template.app/Contents/Info.plist
@@ -11,11 +11,11 @@
 	<key>CFBundleIconFile</key>
 	<string>applet</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.limetech.unRAIDUC</string>
+	<string>com.limetech.UnraidUC</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>unRAIDUC</string>
+	<string>UnraidUC</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
