MacOS: Replace AppleScript applet launcher with QProcess::startDetached with sudo to launch the application with elevated privileges.
- Remove privilege reduction on macOS which causes errors on macOS Catalina when calling seteuid, setegid or setgroups.
- Elevated privileges are needed for access to the removable drive and the macOS Gatekeeper does not prompt or allow access to the drive when launched from the applet using authtrampoline to elevate the privileges.
- The alternative is to use QProcess::startDetached to relaunch the executable with sudo -A (--askpass). The askpass argument uses the SUDO_ASKPASS environment to launch a GUI prompting for the sudo password instead of using the command line.
- The GUI for the sudo command is a javascript automation script included in the Mac application bundle.

--- a/dmg_osx/template.app/Contents/Info.plist
+++ b/dmg_osx/template.app/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>applet</string>
+	<string>Unraid USB Creator</string>
 	<key>CFBundleIconFile</key>
 	<string>applet</string>
 	<key>CFBundleIdentifier</key>
